--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -56,12 +55,13 @@
                     android:id="@+id/ivPoster"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:src="@drawable/img_frame"/>
+                    android:src="@drawable/img_frame" />
             </RelativeLayout>
 
             <LinearLayout
@@ -76,9 +76,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/product_sans_bold"
+                    android:text="-"
                     android:textColor="@color/black_bold_text"
-                    android:textSize="@dimen/_16sdp"
-                    android:text="-" />
+                    android:textSize="@dimen/_16sdp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -90,9 +90,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:fontFamily="@font/product_sans_medium"
+                        android:text="Genre"
                         android:textColor="@color/black_bold_text"
-                        android:textSize="@dimen/_12sdp"
-                        android:text="Genre" />
+                        android:textSize="@dimen/_12sdp" />
 
                     <TextView
                         android:id="@+id/tvGenre"
@@ -100,9 +100,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/product_sans_medium"
+                        android:text="-"
                         android:textColor="@color/black_bold_text"
-                        android:textSize="@dimen/_12sdp"
-                        android:text="-" />
+                        android:textSize="@dimen/_12sdp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -115,9 +115,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:fontFamily="@font/product_sans_medium"
+                        android:text="Release"
                         android:textColor="@color/black_bold_text"
-                        android:textSize="@dimen/_12sdp"
-                        android:text="Release" />
+                        android:textSize="@dimen/_12sdp" />
 
                     <TextView
                         android:id="@+id/tvRelease"
@@ -125,9 +125,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/product_sans_medium"
+                        android:text="-"
                         android:textColor="@color/black_bold_text"
-                        android:textSize="@dimen/_12sdp"
-                        android:text="-" />
+                        android:textSize="@dimen/_12sdp" />
                 </LinearLayout>
 
                 <RelativeLayout
@@ -157,10 +157,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_10sdp"
-                            android:fontFamily="@font/product_sans_bold"
-                            android:textColor="?attr/boldText"
-                            android:textSize="14sp"
-                            android:text="0" />
+                            android:fontFamily="@font/product_sans_medium"
+                            android:text="0"
+                            android:textColor="@color/black_bold_text"
+                            android:textSize="@dimen/_12sdp" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
@@ -178,9 +178,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/product_sans_bold"
+                android:text="Synopsis"
                 android:textColor="@color/black_bold_text"
-                android:textSize="@dimen/_16sdp"
-                android:text="Synopsis" />
+                android:textSize="@dimen/_16sdp" />
 
             <TextView
                 android:id="@+id/tvSynopsis"
@@ -191,6 +191,51 @@
                 android:text="@string/overview"
                 android:textColor="?attr/regularText"
                 android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/_10sdp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:fontFamily="@font/product_sans_bold"
+                android:text="Reviews"
+                android:textColor="@color/black_bold_text"
+                android:textSize="@dimen/_16sdp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcyReview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tvInfoReview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/product_sans_bold"
+                    android:gravity="center"
+                    android:text="There is no review information for this film."
+                    android:textColor="@color/black_bold_text"
+                    android:textSize="@dimen/_12sdp"
+                    android:visibility="gone" />
+            </RelativeLayout>
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/progressReview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true" />
         </LinearLayout>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
