--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/tvInfoVideo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/product_sans_bold"
                 android:gravity="center"
@@ -221,7 +221,7 @@
                 <TextView
                     android:id="@+id/tvInfoReview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:fontFamily="@font/product_sans_bold"
                     android:gravity="center"
