--- a/app/src/main/res/layout/item_movie_search.xml
+++ b/app/src/main/res/layout/item_movie_search.xml
@@ -1,44 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
     android:background="@color/transparent"
     android:orientation="vertical"
-    android:padding="@dimen/_5sdp"
-    android:gravity="center">
+    android:layout_margin="@dimen/_2sdp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="@dimen/_5sdp"
+        app:cardElevation="@dimen/_1sdp"
+        android:layout_margin="@dimen/_2sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivPoster"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_160sdp"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/backgrounds/scenic" />
+            <RelativeLayout
+                android:layout_width="@dimen/_120sdp"
+                android:layout_height="@dimen/_160sdp">
+
+                <ImageView
+                    android:id="@+id/ivPoster"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_160sdp"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_160sdp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img_frame" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/btnTicket"
+                android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/material_blue"
                 android:fontFamily="@font/product_sans_bold"
                 android:gravity="center"
-                android:paddingVertical="@dimen/_10sdp"
-                android:text="Buy Ticket"
-                android:textColor="@color/white"
-                android:textSize="12sp" />
+                android:text="-"
+                android:textColor="@color/black_bold_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/tvGenre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/product_sans_medium"
+                android:gravity="center"
+                android:text="-"
+                android:textColor="@color/black_bold_text"
+                android:textSize="@dimen/_10sdp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
